# RESTcpp

./: CMakeLists.txt  Makefile  README
include/: Service.hpp
src/: Server.cpp  Server.hpp  Service.cpp  ShutdownManager.cpp  ShutdownManager.hpp
test/: ServiceTest.cpp  main.cpp
